[gd_scene load_steps=7 format=3 uid="uid://b2i1lxoxv3ksn"]

[ext_resource type="Script" uid="uid://ciee0by7utf3w" path="res://scripts/screens/fail_box.gd" id="1_68dnm"]
[ext_resource type="AudioStream" uid="uid://42ycc35noq4r" path="res://audio/sfx/fail.mp3" id="3_qit8x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_68dnm"]
bg_color = Color(0.073913, 0, 0, 0.670588)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24
expand_margin_left = 16.0
expand_margin_top = 16.0
expand_margin_right = 16.0
expand_margin_bottom = 16.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qit8x"]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color(0.0078, 0.0587167, 0.13, 0.654902)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.384314, 0.635294, 0.92549, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8j1gj"]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color(0.0132, 0.0993667, 0.22, 0.776471)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.384314, 0.635294, 0.92549, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wtgrx"]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color(0.00784314, 0.0588235, 0.129412, 0.392157)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.384314, 0.635294, 0.92549, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="CanvasLayer" type="CanvasLayer"]
layer = 128
script = ExtResource("1_68dnm")

[node name="FailBox" type="Control" parent="."]
process_mode = 3
texture_filter = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="FailBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.06, 0, 0, 0.666667)

[node name="PanelContainer" type="PanelContainer" parent="FailBox/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -42.5
offset_right = 85.0
offset_bottom = 42.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_68dnm")

[node name="VBoxContainer" type="VBoxContainer" parent="FailBox/ColorRect/PanelContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Title" type="Label" parent="FailBox/ColorRect/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.439216, 0.439216, 1)
theme_override_font_sizes/font_size = 24
text = "You died!"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="FailBox/ColorRect/PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Restart" type="Button" parent="FailBox/ColorRect/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/hover = SubResource("StyleBoxFlat_qit8x")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8j1gj")
theme_override_styles/normal = SubResource("StyleBoxFlat_wtgrx")
text = "Restart"

[node name="Exit" type="Button" parent="FailBox/ColorRect/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"FlatButton"
text = "Main Menu"

[node name="FailSFX" type="AudioStreamPlayer" parent="FailBox"]
unique_name_in_owner = true
stream = ExtResource("3_qit8x")
volume_db = -16.0
bus = &"SFX"

[connection signal="pressed" from="FailBox/ColorRect/PanelContainer/VBoxContainer/HBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="FailBox/ColorRect/PanelContainer/VBoxContainer/HBoxContainer/Exit" to="." method="_on_exit_pressed"]
